--- a/client/src/styles/components/PostLikesModal.css
+++ b/client/src/styles/components/PostLikesModal.css
@@ -37,3 +37,10 @@
   list-style: none;
   margin: 0.5rem;
 }
+
+
+@media (max-width: 767px) {
+  .modal-content {
+    min-width: 95vw;
+  }
+}
